[*] Update docker-compose build and credentials.

--- a/.env.development.yaml
+++ b/.env.development.yaml
@@ -2,5 +2,5 @@ app:
   queue:
     host: 127.0.0.1
     tool: localhost:15672
-    username: kerkoleng
-    password: sz09063012
+    username: guest
+    password: guest
