--- a/.env.production.yaml
+++ b/.env.production.yaml
@@ -1,7 +1,6 @@
 app:
- 
   queue:
-    host: 127.0.0.1
-    tool: localhost:15672
+    host: localhost
+    tool: localhost:17651
     username: guest
     password: guest
